# draft

./: .coveragerc  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: lint.yml  tests.yml
draft/: linear_draft.py  perpetual_snake_draft.py  snake_draft.py  temporary_snake_draft.py
draft/utils/: utils.py
test/: conftest.py  test_linear_draft.py  test_perpetual_snake_draft.py  test_snake_draft.py  test_temporary_snake_draft.py  test_utils.py
test/data/: draft_four.csv  draft_one.csv  draft_three.csv  draft_two.csv  draft_zero.csv
test/utils/: test_utils.py
