[tool.poetry]
name = "draft"
version = "0.1.0"
description = "Brute-force drafting tools"
authors = ["Amit Pahwa <amit@amitpahwa.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.0"
click = "^8.0.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^22.1.0"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
